# nlpack

./: LICENSE  pyproject.toml
nlpack/: cli.py  locations.py  normalizer.py  tokenizer.py  utils.py
nlpack/analyzer/: __init__.py  alignments.py  compare_sysouts.py  corpus_stats.py
nlpack/preprocessor/: __init__.py  clean_mono_corpus.py  clean_parallel_corpus.py  dedup.py  filter_by_lid.py  sampling_corpus.py
src/nlpack/: __init__.py  main.py  utils.py
src/nlpack/analyzer/: alignments.py  compare_sysouts.py  corpus_stats.py
src/nlpack/preprocessor/: __init__.py  filter_by_lid.py  sampling_corpus.py
