[tool.isort]
profile = "black"

[tool.poetry]
name = "nlpack"
version = "0.1.0"
description = "Collections of natural language processing tools."
authors = ["Hiroyuki Deguchi <deguchi.hiroyuki.db0@is.naist.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
click-help-colors = "^0.9.1"
rich = "^10.6.0"
numpy = "^1.21.1"
sacrebleu = "^2.0.0"
fasttext = {git = "https://github.com/facebookresearch/fastText"}

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"

[tool.poetry.scripts]
nlpack = "nlpack.main:main"

[build-system]
requires = ["poetry>=1.0.0", "setuptools"]
build-backend = "poetry.masonry.api"
