[tool.poetry]
name = "nlpack"
version = "0.1.0"
description = "Collections of natural language processing tools."
authors = ["Hiroyuki Deguchi <deguchi.hiroyuki.db0@is.naist.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
click-help-colors = "^0.9.1"
rich = "^12.5.1"
numpy = "^1.23.3"
sacrebleu = {extras = ["ja"], version = "^2.2.1"}
wcwidth = "^0.2.5"
fasttext = "^0.9.3"
lxml = "^4.9.3"

[tool.poetry.scripts]
nlpack = "nlpack.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ruff = "^0.5.1"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry>=1.0.0", "setuptools"]
build-backend = "poetry.masonry.api"
