[project]
name = "nlpack"
version = "0.1.0"
description = "Collections of natural language processing tools."
readme = "README.md"
authors = [
    { name = "Hiroyuki Deguchi", email = "deguchi.hiroyuki.db0@is.naist.jp" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "click-help-colors>=0.9.4",
    "cysimdjson>=24.12",
    "fasttext>=0.9.3",
    "lxml>=5.3.0",
    "numpy>=2.2.1",
    "rich>=13.9.4",
    "sacrebleu[ja]>=2.4.3",
    "wcwidth>=0.2.13",
]

[project.scripts]
nlpack = "nlpack.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
]

[tool.ruff.lint]
extend-select = ["I"]
